deps/v8/test/message/weakref-finalizationregistry-error.out
*%(basename)s:{NUMBER}: Error: callback
  throw new Error('callback');
  ^
Error: callback
    at callback (*%(basename)s:{NUMBER}:{NUMBER})

*%(basename)s:{NUMBER}: Error: callback
  throw new Error('callback');
  ^
Error: callback
    at callback (*%(basename)s:{NUMBER}:{NUMBER})

